# Aksha

./: .gitignore  README.md  create-dummy-png.cjs  create-icon.cjs  create-icon.js  generate-ico.cjs  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  indexer.rs  main.rs  search.rs
src/components/: ContextMenu.css  ContextMenu.tsx  FileIcon.css  FileIcon.tsx  ResultsList.css  ResultsList.tsx  SearchBar.css  SearchBar.tsx
